# libattr-hs

./: LICENSE  Makefile  README.md  Xattr.hs  Xattr.hsc  configure  configure.ac  xattr.cabal
System/: Xattr.hsc
System/Xattr/: CFuncs.hsc
include/: HsXattrConfig.h.in
src/System/: Xattr.hs  Xattr.hsc
src/System/Xattr/: CFuncs.hsc  Types.hsc
tests/: Tests.hs
